# sendgrid-campaigns

./: .gitignore  README.md  pyproject.toml
sendgrid_campaigns/: campaign_manager.py  cli.py  eml_extractor.py
sendgrid_campaigns/api/: campaign.py  scheduling.py  sender.py
sendgrid_campaigns/utils/: date_utils.py  file_utils.py
